# caffe

./: .gitignore  train_caffe.sh
MakeLabel/: MakeAnnotation.m  getProcessedImage.m  main.m
Test/: CMakeLists.txt  main.cpp
data/whiteline10/: train.txt
data/whiteline10/cls/: image00227.mat  image00251.mat  image00259.mat  image00266.mat  image00268.mat  image00363.mat  image00382.mat  image00440.mat  image00447.mat  image00473.mat
data/whiteline10/gimp/: image00251.xcf  image00363.xcf  image00382.xcf
data/whiteline10/inst/: image00227.mat  image00251.mat  image00259.mat  image00266.mat  image00268.mat  image00363.mat  image00382.mat  image00440.mat  image00447.mat  image00473.mat
data/whiteline10_20cls/: val.txt
data/whiteline10_20cls/cls/: image00227.mat  image00251.mat  image00259.mat  image00266.mat  image00268.mat  image00363.mat  image00382.mat  image00440.mat  image00447.mat  image00473.mat
data/whiteline10_20cls/gimp/: image00227.xcf  image00259.xcf  image00266.xcf  image00268.xcf  image00440.xcf  image00447.xcf  image00473.xcf
data/whiteline10_20cls/inst/: image00227.mat  image00251.mat  image00259.mat  image00266.mat  image00268.mat  image00363.mat  image00382.mat  image00440.mat  image00447.mat  image00473.mat
models/voc-fcn8s/: solver.prototxt  train.prototxt
models/whiteline10-fcn8s/: solver.prototxt  train.prototxt  val.prototxt
models/whiteline10_20cls-fcn8s/: solver.prototxt  train.prototxt  val.prototxt
python/: infer.py  infer_all.py
